--- a/exercises/lecture2-semantic-nets.ipynb
+++ b/exercises/lecture2-semantic-nets.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "8a7b5842-ccc8-449f-8076-93568a2ddd1d",
    "metadata": {
     "tags": []
@@ -63,6 +63,14 @@
     "        super().__init__(name)\n",
     "        # implement as default that everyone likes puppies\n",
     "        self.add_default_relation(\"likes\", \"Puppy\")\n",
+    "\n",
+    "class Team(Entity):\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        # use function from parent class to create an instance of \"Person\"\n",
+    "        super().__init__(name)\n",
+    "        # implement as default that everyone is fast\n",
+    "        self.add_default_relation(\"is\", \"fast\")\n",
     "    \n",
     "    \n",
     "class Animal(Entity):\n",
@@ -116,7 +124,7 @@
     "            entity2 = self.entities[entity_name2]\n",
     "            self.relationships.append(Relationship(entity1, relation, entity2))\n",
     "\n",
-    "            \n",
+    "    #to test directional relationships \n",
     "    def query(self, entity_name1, relation, entity_name2):\n",
     "        \n",
     "        if entity_name1 in self.entities and entity_name2 in self.entities:        \n",
@@ -131,6 +139,33 @@
     "                        return True\n",
     "                    \n",
     "        # return False if either entity or the relationship was not found\n",
+    "        return False\n",
+    "    \n",
+    "    #to test relationships that you think are not directional\n",
+    "    def query_symmetric(self, entity1, relation, entity2):\n",
+    "      \n",
+    "        if entity1 in self.entities and entity2 in self.entities:        \n",
+    "                # find entities by their names\n",
+    "                entity1 = self.entities[entity1]\n",
+    "                entity2 = self.entities[entity2]\n",
+    "\n",
+    "                # search for the queried relationship\n",
+    "                for r in self.relationships:\n",
+    "                    if (r.entity1 == entity1 and r.entity2 == entity2) or (r.entity1 == entity2 and r.entity2 == entity1):                        \n",
+    "                        if r.relation == relation:\n",
+    "                            return True\n",
+    "                            \n",
+    "        # return False if either entity or the relationship was not found\n",
+    "        return False\n",
+    "    \n",
+    "    #assume not directional relationships, i.e. symmetric\n",
+    "    def query_transitive(self, entity1, relation, entity2):\n",
+    "\n",
+    "        for entity_t in self.entities:\n",
+    "            if self.query_symmetric(entity1, relation, entity_t) and self.query_symmetric(entity2, relation, entity_t):\n",
+    "                return True\n",
+    "                     \n",
+    "        # return False if either entity or the relationship was not found\n",
     "        return False"
    ]
   },
@@ -144,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "8d3c3d14-517d-4486-b2f3-7fd146cb55fe",
    "metadata": {
     "tags": []
@@ -182,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "9ab73f14-39f6-4eaf-ab18-0714fd29426c",
    "metadata": {
     "tags": []
@@ -207,6 +242,68 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93daa8ae",
+   "metadata": {},
+   "source": [
+    "My own network. Formula 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "645da0ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "F1_principals = SemanticNetwork()\n",
+    "\n",
+    "F1_principals.add_entity(Person(\"Toto Wolff\"))\n",
+    "F1_principals.add_entity(Person(\"Christian Horner\"))\n",
+    "F1_principals.add_entity(Person(\"Fred Vasseur\"))\n",
+    "\n",
+    "F1_principals.add_entity(Team(\"Mercedes\"))\n",
+    "F1_principals.add_entity(Team(\"Red Bull\"))\n",
+    "F1_principals.add_entity(Team(\"Ferrari\"))\n",
+    "\n",
+    "F1_principals.add_relation(\"Toto Wolff\", \"is the team principal of\", \"Mercedes\")\n",
+    "F1_principals.add_relation(\"Christian Horner\", \"is the team principal of\", \"Red Bull\")\n",
+    "F1_principals.add_relation(\"Fred Vasseur\", \"is the team principal of\", \"Ferrari\")\n",
+    "\n",
+    "F1_principals.add_relation(\"Toto Wolff\", \"hates\", \"Christian Horner\")\n",
+    "F1_principals.add_relation(\"Fred Vasseur\", \"likes\", \"Toto Wolff\")\n",
+    "F1_principals.add_relation(\"Fred Vasseur\", \"is neutral to\", \"Christian Horner\")\n",
+    "F1_principals.add_relation(\"Christian Horner\", \"thinks she/he/they is/are better than\", \"Fred Vasseur\")\n",
+    "F1_principals.add_relation(\"Christian Horner\", \"thinks she/he/they is/are better than\", \"Toto Wolff\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "dcf1222e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(F1_principals.query(\"Toto Wolff\", \"is the team principal of\", \"Red Bull\"))    # Output: False\n",
+    "print(F1_principals.query(\"Christian Horner\", \"likes\", \"Toto Wolff\")) # Output: False\n",
+    "print(F1_principals.query(\"Fred Vasseur\", \"hates\", \"Toto Wolff\")) # Output: False\n",
+    "print(F1_principals.query(\"Christian Horner\", \"thinks she/he/they is/are better than\", \"Toto Wolff\"))  # Output: True  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a4cd9ea4-360a-4be1-bede-140f2aa5b7c6",
    "metadata": {},
    "source": [
@@ -217,14 +314,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3f44e845-2acc-4e42-a75b-b74042fc79bd",
+   "cell_type": "markdown",
+   "id": "f56bf1e9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def query_symmetric(self, entity1, relation):\n",
-    "   \"\"\"ADD SOME CODE\"\"\""
+    "Let's test. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d5d95040",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(F1_principals.query(\"Christian Horner\", \"hates\", \"Toto Wolff\"))           # Output: False\n",
+    "print(F1_principals.query_symmetric(\"Christian Horner\", \"hates\", \"Toto Wolff\")) # Output: True"
    ]
   },
   {
@@ -240,15 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "9ea0967f-08a2-4122-ab8f-7831b6f84957",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def query_transitive(self, entity1, relation, entity2):\n",
-    "   \"\"\"ADD SOME CODE\"\"\""
+    "print(F1_principals.query(\"Fred Vasseur\", \"thinks she/he/they is/are better than\", \"Toto Wolff\")) # Output: False\n",
+    "print(F1_principals.query_transitive(\"Fred Vasseur\", \"thinks she/he/they is/are better than\", \"Toto Wolff\")) # Output: True  "
    ]
   }
  ],
@@ -268,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
