--- a/exercises/lecture2-bayesian-nets.ipynb
+++ b/exercises/lecture2-bayesian-nets.ipynb
@@ -72,10 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "af0216f0-a2e0-42b6-826a-c9bf9cc42509",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:numexpr.utils:NumExpr defaulting to 8 threads.\n",
+      "/opt/miniconda3/envs/learning/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from pgmpy.models import BayesianNetwork\n",
     "from pgmpy.factors.discrete import TabularCPD\n",
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "ff3b84c0-5718-4dc8-b3cd-bb54452ac862",
    "metadata": {},
    "outputs": [
@@ -179,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
