--- a/weekly-projects/week1/Project A - scattergory brute force player.ipynb
+++ b/weekly-projects/week1/Project A - scattergory brute force player.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "af4b3ad8",
    "metadata": {},
    "outputs": [],
@@ -15,15 +15,14 @@
    "id": "3ef73941",
    "metadata": {},
    "source": [
-    "* 1. I tried to API into OpenAi to use ChatGPT to generate answers but I couldn't figure how to properly do that and encountered a bunch of errors. Without LLM, the simplest solution is to write up a list of items starting with letters A-Z for each category and sieve through it. I didn't actually do it myself, but asked ChatGPT to generate the lists. I double-checked them and inserted missing information. Sometimes it skips a letter or gives a dubious answer. \n",
+    "* 1. I tried to API into OpenAI to use ChatGPT to generate answers but I couldn't figure how to properly do that and encountered a bunch of errors. Without LLM, the simplest solution is to write up a list of items starting with letters A-Z for each category and sieve through it. I didn't actually do it myself, but asked ChatGPT to generate the lists. I double-checked them and inserted missing information. Sometimes it skips a letter or gives a dubious answer. \n",
     "* 2. I am not sure if one can use OpenAI API for free anymore. According to OpenAI forums, they removed free credits this year and [you have to pay subscription for API](https://community.openai.com/t/does-chatgpt-still-giving-free-18-credits-for-new-users/291019). I would love to learn more about it but it felt not worth it for this little project.\n",
-    "* 3. In certain categories, there is no item starting with X or Q.\n",
-    "* 4. I also wrote a function that allows someone to populate the existing dictionary and save it in a file so that one can grow the dictionary.\n"
+    "* 3. In certain categories, there is no item starting with X or Q.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "3e8146eb",
    "metadata": {},
    "outputs": [],
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "4cc2f020",
    "metadata": {},
    "outputs": [],
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "7921b670",
    "metadata": {},
    "outputs": [],
@@ -148,6 +147,7 @@
     "def generate_answers(selected_categories, letter):\n",
     "    generated_answers = []\n",
     "    print(letter)\n",
+    "    print(selected_categories)\n",
     "    for category in selected_categories:\n",
     "        for word in category_items[category]:\n",
     "            if str(word)[0] == str.upper(letter):\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "015635af",
    "metadata": {},
    "outputs": [
@@ -202,9 +202,10 @@
       "19. Transport\n",
       "20. Jobs\n",
       "K\n",
+      "['Vegetables', 'Flowers', 'Movies', 'Countries', 'Colors']\n",
       "\n",
       "Generated Answers:\n",
-      "['Kiwi', 'Kumquat', 'Knife', 'Kangaroo', 'Kenya']\n"
+      "['Kale', 'Kohlrabi', 'Kalanchoe', 'Kill Bill', 'Kenya', 'Khaki']\n"
      ]
     }
    ],
