--- a/weekly-projects/week2/Homework 2 Part 1.ipynb
+++ b/weekly-projects/week2/Homework 2 Part 1.ipynb
@@ -115,7 +115,7 @@
     "var_name1 = var_names[0]\n",
     "\n",
     "# select data associated with the first variable\n",
-    "x1 = X[vname]\n",
+    "x1 = X[var_name1]\n",
     "\n",
     "# turn that dataframe column into a nx1 numpy array\n",
     "x1_data = np.array([x1.to_numpy()]).T\n",
