--- a/weekly-projects/week2/Homework 2 Part 2.ipynb
+++ b/weekly-projects/week2/Homework 2 Part 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fb91f56b-fc44-48c1-9345-8916f19d280c",
    "metadata": {},
    "outputs": [],
@@ -40,12 +40,310 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4deba195",
+   "metadata": {},
+   "source": [
+    "#### Step 2\n",
+    "\n",
+    "Let's load the data to get an idea of what it looks like."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "38e7f11e-ec71-4e73-bbca-b02b632c0850",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from pgmpy.models import BayesianNetwork\n",
+    "from pgmpy.factors.discrete import TabularCPD\n",
+    "from pgmpy.inference import VariableElimination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "11635543",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MeSH Disease Term</th>\n",
+       "      <th>PubMed occurrence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Breast Neoplasms</td>\n",
+       "      <td>122226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hypertension</td>\n",
+       "      <td>107294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Coronary Artery Disease</td>\n",
+       "      <td>82819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lung Neoplasms</td>\n",
+       "      <td>78009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Myocardial Infarction</td>\n",
+       "      <td>75945</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         MeSH Disease Term  PubMed occurrence\n",
+       "0         Breast Neoplasms             122226\n",
+       "1             Hypertension             107294\n",
+       "2  Coronary Artery Disease              82819\n",
+       "3           Lung Neoplasms              78009\n",
+       "4    Myocardial Infarction              75945"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diseases_df = pd.read_csv(\"supmat1.txt\", sep='\\t')\n",
+    "diseases_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "460484aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MeSH Symptom Term</th>\n",
+       "      <th>PubMed occurrence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Body Weight</td>\n",
+       "      <td>147857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pain</td>\n",
+       "      <td>103168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Obesity</td>\n",
+       "      <td>100301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anoxia</td>\n",
+       "      <td>47351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mental Retardation</td>\n",
+       "      <td>43883</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    MeSH Symptom Term  PubMed occurrence\n",
+       "0         Body Weight             147857\n",
+       "1                Pain             103168\n",
+       "2             Obesity             100301\n",
+       "3              Anoxia              47351\n",
+       "4  Mental Retardation              43883"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symptoms_df = pd.read_csv(\"supmat2.txt\", sep='\\t')\n",
+    "symptoms_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "80dca885",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MeSH Symptom Term</th>\n",
+       "      <th>MeSH Disease Term</th>\n",
+       "      <th>PubMed occurrence</th>\n",
+       "      <th>TFIDF score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aging, Premature</td>\n",
+       "      <td>Respiratory Syncytial Virus Infections</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.464551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aging, Premature</td>\n",
+       "      <td>Orthomyxoviridae Infections</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.464551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aging, Premature</td>\n",
+       "      <td>HIV Infections</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10.393654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aging, Premature</td>\n",
+       "      <td>Acquired Immunodeficiency Syndrome</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10.393654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aging, Premature</td>\n",
+       "      <td>Breast Neoplasms</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.464551</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  MeSH Symptom Term                       MeSH Disease Term  \\\n",
+       "0  Aging, Premature  Respiratory Syncytial Virus Infections   \n",
+       "1  Aging, Premature             Orthomyxoviridae Infections   \n",
+       "2  Aging, Premature                          HIV Infections   \n",
+       "3  Aging, Premature      Acquired Immunodeficiency Syndrome   \n",
+       "4  Aging, Premature                        Breast Neoplasms   \n",
+       "\n",
+       "   PubMed occurrence  TFIDF score  \n",
+       "0                  1     3.464551  \n",
+       "1                  1     3.464551  \n",
+       "2                  3    10.393654  \n",
+       "3                  3    10.393654  \n",
+       "4                  1     3.464551  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cooccurrences_df = pd.read_csv(\"supmat3.txt\", sep='\\t')\n",
+    "cooccurrences_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "324f827e",
+   "metadata": {},
+   "source": [
+    "#### Step 3-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "eac2c8e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Step 4: Assign Prior Probabilities based on occurrence data of diseases\n",
+    "# We will treat occurrences in scientific papers as the ground truth for real life and count the occurrence of each disease proportional to all occurrences.\n",
+    "occurrences = diseases_df.iloc[:, 1]\n",
+    "total_occurrences = occurrences.sum()\n",
+    "prior_probabilities = occurrences/total_occurrences"
+   ]
   }
  ],
  "metadata": {
@@ -64,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
