--- a/exercises/lecture2-bayesian-nets.ipynb
+++ b/exercises/lecture2-bayesian-nets.ipynb
@@ -72,17 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "af0216f0-a2e0-42b6-826a-c9bf9cc42509",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:numexpr.utils:NumExpr defaulting to 8 threads.\n",
-      "/opt/miniconda3/envs/learning/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     "ename": "AttributeError",
+     "evalue": "'BayesianNetwork' object has no attribute 'plot'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# Check if the model is valid\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m model\u001b[38;5;241m.\u001b[39mcheck_model()\n\u001b[0;32m---> 28\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'BayesianNetwork' object has no attribute 'plot'"
      ]
     }
    ],
@@ -113,7 +115,8 @@
     "model.add_cpds(cpd_a, cpd_b, cpd_c, cpd_d)\n",
     "\n",
     "# Check if the model is valid\n",
-    "assert model.check_model()"
+    "assert model.check_model()\n",
+    "model.plot()"
    ]
   },
   {
